Started working on function that extracts adress from a house

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import cloudscraper\n",
     "from geopy.geocoders import Nominatim\n",
     "from geopy.extra.rate_limiter import RateLimiter\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -35,22 +36,86 @@
     "    a_tags = soup.find_all('a',class_='sold-property-link js-sold-property-card-link')\n",
     "    return [tag.get('href') for tag in a_tags]\n",
     "\n",
-    "def get_houses_info(link:list[str]):\n",
+    "def get_houses_info(links:list[str]):\n",
     "    \"\"\"Takes the link to a house and returns a dictionary with the house properties\"\"\"\n",
+    "    scraper = cloudscraper.create_scraper()  # returns a CloudScraper instance\n",
     "    \n",
+    "    house_properties = []\n",
+    "    \n",
+    "    for link in links:\n",
+    "        html = scraper.get(link).content\n",
+    "        soup = BeautifulSoup(html, 'html.parser')\n",
+    "        \n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "scraper_houses = cloudscraper.create_scraper()  # returns a CloudScraper instance\n",
-    "links = ['hemnet.se/salda/villa-5rum-solbacken-malmo-kommun-vilebovagen-22a-207996096575631945']\n",
-    "html = scraper.get(links).content\n",
+    "link = 'https://www.hemnet.se/salda/villa-6rum-alvsborg-goteborgs-kommun-pramgatan-7c-2628947802481352792'\n",
+    "html = scraper_houses.get(link).content\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  Pråmgatan 7C'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adress_unparsed = soup.find('h1',class_= 'hcl-heading hcl-heading--size1')\n",
+    "tag_to_remove = adress_unparsed.find('span',class_='sold-property__address-prefix')\n",
+    "tag_to_remove.decompose()\n",
+    "text = adress_unparsed.text.split('\\n')\n",
+    "address = ' '.join([x for x in text if x])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pråmgatan 7C, Älvsborg, Göteborgs kommun\n"
+     ]
+    }
+   ],
+   "source": [
+    "adress_header_unparsed = soup.find('h1',class_= 'hcl-heading hcl-heading--size1')\n",
+    "adress_header_text = adress_unparsed.get_text()\n",
+    "adress_text_prefix = re.sub(r'\\s+', ' ', adress_header_text)\n",
+    "adress_text_prefix = adress_text_prefix.strip()\n",
+    "\n",
+    "adress_metadata_unparsed = soup.find('p',class_= 'sold-property__metadata qa-sold-property-metadata')\n",
+    "adress_metadata_unparsed.find('span',class_= 'property-icon property__description-icon').decompose()\n",
+    "adress_metadata_unparsed.find('time').decompose()\n",
+    "adress_metadata_text = adress_metadata_unparsed.get_text()\n",
+    "adress_metadata_text = re.sub(r'\\s+', ' ', adress_metadata_text)\n",
+    "adress_metadata_text = re.search(r' - (.*?) - ', adress_metadata_text)\n",
+    "\n",
+    "\n",
+    "adress_text = f'{adress_text_prefix}, {adress_metadata_text.group(1)}' # gets the whole adress for a house\n",
     "\n",
     "\n"
    ]
