Realised webpage map div contained a json of all data needed
Removed parsing of adress and started working on parsing the json data instead

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,59 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'  Pråmgatan 7C'"
+       "'{\"status\":\"sold\",\"listing\":{\"id\":2628947802481352792,\"coordinate\":[57.6778374,11.8780241],\"iconName\":\"villa\",\"livingArea\":175.0,\"landArea\":951.8,\"supplementalArea\":66.0,\"soldAt\":\"1671800400\",\"listingHemnetUrl\":\"/salda/villa-6rum-alvsborg-goteborgs-kommun-pramgatan-7c-2628947802481352792\",\"numberOfRooms\":6.0,\"streetAddress\":\"Pråmgatan 7C\",\"labels\":[],\"trackingData\":{\"saleId\":2628947802481352792,\"listingId\":19209596,\"listingType\":\"common_listing\",\"listingPromoType\":\"basic\",\"listingStatus\":\"sale\"},\"sellingPrice\":{\"formatted\":\"9\\xa0800\\xa0000\\xa0kr\"},\"area\":\"Älvsborg\",\"municipality\":{\"fullName\":\"Göteborgs\"},\"squareMeterSellingPrice\":{\"formatted\":null},\"formattedPriceChangePercentageWithSign\":\"-11\\xa0%\",\"fee\":{\"amount\":null,\"formatted\":null},\"housingForm\":{\"symbol\":\"HOUSE\"},\"brokerAgency\":{\"name\":\"Erik Olsson Fastighetsförmedling\",\"brokerCustomization\":{\"showLogoInSerp\":true,\"compactLogoUrl\":\"https://bilder.hemnet.se/images/broker_logo_2/6d/b7/6db7ae1ac6c88bf6ac19132d9c93fc93.png\"}}},\"assets_prefix\":\"\",\"map_url\":\"https://maps.googleapis.com/maps/api/js?key=AIzaSyAvR8lQbyQytYdggFUVGZekvRFX2fJGGZ0\\\\u0026language=sv\\\\u0026libraries=geometry%2Cplaces\\\\u0026map_ids=f2115f301367545e\\\\u0026region=SE\\\\u0026v=weekly\"}'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adress_unparsed = soup.find('h1',class_= 'hcl-heading hcl-heading--size1')\n",
-    "tag_to_remove = adress_unparsed.find('span',class_='sold-property__address-prefix')\n",
-    "tag_to_remove.decompose()\n",
-    "text = adress_unparsed.text.split('\\n')\n",
-    "address = ' '.join([x for x in text if x])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pråmgatan 7C, Älvsborg, Göteborgs kommun\n"
-     ]
-    }
-   ],
-   "source": [
-    "adress_header_unparsed = soup.find('h1',class_= 'hcl-heading hcl-heading--size1')\n",
-    "adress_header_text = adress_unparsed.get_text()\n",
-    "adress_text_prefix = re.sub(r'\\s+', ' ', adress_header_text)\n",
-    "adress_text_prefix = adress_text_prefix.strip()\n",
-    "\n",
-    "adress_metadata_unparsed = soup.find('p',class_= 'sold-property__metadata qa-sold-property-metadata')\n",
-    "adress_metadata_unparsed.find('span',class_= 'property-icon property__description-icon').decompose()\n",
-    "adress_metadata_unparsed.find('time').decompose()\n",
-    "adress_metadata_text = adress_metadata_unparsed.get_text()\n",
-    "adress_metadata_text = re.sub(r'\\s+', ' ', adress_metadata_text)\n",
-    "adress_metadata_text = re.search(r' - (.*?) - ', adress_metadata_text)\n",
-    "\n",
-    "\n",
-    "adress_text = f'{adress_text_prefix}, {adress_metadata_text.group(1)}' # gets the whole adress for a house\n",
-    "\n",
-    "\n"
+    "data_raw = soup.find('div', class_='sold-property__map js-listing-map-sold')['data-initial-data']"
    ]
   },
   {
