Removed geopy part of script. Can get geodata from json data

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -8,8 +8,6 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import cloudscraper\n",
-    "from geopy.geocoders import Nominatim\n",
-    "from geopy.extra.rate_limiter import RateLimiter\n",
     "import pandas as pd\n",
     "import re"
    ]
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,41 +72,35 @@
        "'{\"status\":\"sold\",\"listing\":{\"id\":2628947802481352792,\"coordinate\":[57.6778374,11.8780241],\"iconName\":\"villa\",\"livingArea\":175.0,\"landArea\":951.8,\"supplementalArea\":66.0,\"soldAt\":\"1671800400\",\"listingHemnetUrl\":\"/salda/villa-6rum-alvsborg-goteborgs-kommun-pramgatan-7c-2628947802481352792\",\"numberOfRooms\":6.0,\"streetAddress\":\"Pråmgatan 7C\",\"labels\":[],\"trackingData\":{\"saleId\":2628947802481352792,\"listingId\":19209596,\"listingType\":\"common_listing\",\"listingPromoType\":\"basic\",\"listingStatus\":\"sale\"},\"sellingPrice\":{\"formatted\":\"9\\xa0800\\xa0000\\xa0kr\"},\"area\":\"Älvsborg\",\"municipality\":{\"fullName\":\"Göteborgs\"},\"squareMeterSellingPrice\":{\"formatted\":null},\"formattedPriceChangePercentageWithSign\":\"-11\\xa0%\",\"fee\":{\"amount\":null,\"formatted\":null},\"housingForm\":{\"symbol\":\"HOUSE\"},\"brokerAgency\":{\"name\":\"Erik Olsson Fastighetsförmedling\",\"brokerCustomization\":{\"showLogoInSerp\":true,\"compactLogoUrl\":\"https://bilder.hemnet.se/images/broker_logo_2/6d/b7/6db7ae1ac6c88bf6ac19132d9c93fc93.png\"}}},\"assets_prefix\":\"\",\"map_url\":\"https://maps.googleapis.com/maps/api/js?key=AIzaSyAvR8lQbyQytYdggFUVGZekvRFX2fJGGZ0\\\\u0026language=sv\\\\u0026libraries=geometry%2Cplaces\\\\u0026map_ids=f2115f301367545e\\\\u0026region=SE\\\\u0026v=weekly\"}'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_raw = soup.find('div', class_='sold-property__map js-listing-map-sold')['data-initial-data']"
+    "data_raw = soup.find('div', class_='sold-property__map js-listing-map-sold')['data-initial-data']\n",
+    "data_raw = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(57.7079695, 12.8036417)\n"
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data_raw[\u001b[39m\"\u001b[39;49m\u001b[39mnumberofRooms\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "def get_coordinates(addresses:list[str]):\n",
-    "    geolocator = Nominatim(user_agent=\"House_price_prediction\")\n",
-    "    geocode = RateLimiter(geolocator.geocode, min_delay_seconds=1)\n",
-    "    \n",
-    "    locations = []\n",
-    "    \n",
-    "    for address in addresses:\n",
-    "        location = geolocator.geocode(address)\n",
-    "        locations.append((location.latitude, location.longitude))\n",
-    "\n"
+    "data_raw[\"numberofRooms\"]"
    ]
   }
  ],
