Parsed json data to get needed information

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import cloudscraper\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import json"
    ]
   },
   {
@@ -63,44 +64,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"status\":\"sold\",\"listing\":{\"id\":2628947802481352792,\"coordinate\":[57.6778374,11.8780241],\"iconName\":\"villa\",\"livingArea\":175.0,\"landArea\":951.8,\"supplementalArea\":66.0,\"soldAt\":\"1671800400\",\"listingHemnetUrl\":\"/salda/villa-6rum-alvsborg-goteborgs-kommun-pramgatan-7c-2628947802481352792\",\"numberOfRooms\":6.0,\"streetAddress\":\"Pråmgatan 7C\",\"labels\":[],\"trackingData\":{\"saleId\":2628947802481352792,\"listingId\":19209596,\"listingType\":\"common_listing\",\"listingPromoType\":\"basic\",\"listingStatus\":\"sale\"},\"sellingPrice\":{\"formatted\":\"9\\xa0800\\xa0000\\xa0kr\"},\"area\":\"Älvsborg\",\"municipality\":{\"fullName\":\"Göteborgs\"},\"squareMeterSellingPrice\":{\"formatted\":null},\"formattedPriceChangePercentageWithSign\":\"-11\\xa0%\",\"fee\":{\"amount\":null,\"formatted\":null},\"housingForm\":{\"symbol\":\"HOUSE\"},\"brokerAgency\":{\"name\":\"Erik Olsson Fastighetsförmedling\",\"brokerCustomization\":{\"showLogoInSerp\":true,\"compactLogoUrl\":\"https://bilder.hemnet.se/images/broker_logo_2/6d/b7/6db7ae1ac6c88bf6ac19132d9c93fc93.png\"}}},\"assets_prefix\":\"\",\"map_url\":\"https://maps.googleapis.com/maps/api/js?key=AIzaSyAvR8lQbyQytYdggFUVGZekvRFX2fJGGZ0\\\\u0026language=sv\\\\u0026libraries=geometry%2Cplaces\\\\u0026map_ids=f2115f301367545e\\\\u0026region=SE\\\\u0026v=weekly\"}'"
+       "{'status': 'sold',\n",
+       " 'listing': {'id': 2628947802481352792,\n",
+       "  'coordinate': [57.6778374, 11.8780241],\n",
+       "  'iconName': 'villa',\n",
+       "  'livingArea': 175.0,\n",
+       "  'landArea': 951.8,\n",
+       "  'supplementalArea': 66.0,\n",
+       "  'soldAt': '1671800400',\n",
+       "  'listingHemnetUrl': '/salda/villa-6rum-alvsborg-goteborgs-kommun-pramgatan-7c-2628947802481352792',\n",
+       "  'numberOfRooms': 6.0,\n",
+       "  'streetAddress': 'Pråmgatan 7C',\n",
+       "  'labels': [],\n",
+       "  'trackingData': {'saleId': 2628947802481352792,\n",
+       "   'listingId': 19209596,\n",
+       "   'listingType': 'common_listing',\n",
+       "   'listingPromoType': 'basic',\n",
+       "   'listingStatus': 'sale'},\n",
+       "  'sellingPrice': {'formatted': '9\\xa0800\\xa0000\\xa0kr'},\n",
+       "  'area': 'Älvsborg',\n",
+       "  'municipality': {'fullName': 'Göteborgs'},\n",
+       "  'squareMeterSellingPrice': {'formatted': None},\n",
+       "  'formattedPriceChangePercentageWithSign': '-11\\xa0%',\n",
+       "  'fee': {'amount': None, 'formatted': None},\n",
+       "  'housingForm': {'symbol': 'HOUSE'},\n",
+       "  'brokerAgency': {'name': 'Erik Olsson Fastighetsförmedling',\n",
+       "   'brokerCustomization': {'showLogoInSerp': True,\n",
+       "    'compactLogoUrl': 'https://bilder.hemnet.se/images/broker_logo_2/6d/b7/6db7ae1ac6c88bf6ac19132d9c93fc93.png'}}},\n",
+       " 'assets_prefix': '',\n",
+       " 'map_url': 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAvR8lQbyQytYdggFUVGZekvRFX2fJGGZ0&language=sv&libraries=geometry%2Cplaces&map_ids=f2115f301367545e&region=SE&v=weekly'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_raw = soup.find('div', class_='sold-property__map js-listing-map-sold')['data-initial-data']\n",
-    "data_raw = "
+    "data_raw = json.loads(soup.find('div', class_='sold-property__map js-listing-map-sold')['data-initial-data'])\n",
+    "data_raw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data_raw[\u001b[39m\"\u001b[39;49m\u001b[39mnumberofRooms\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
-     ]
+     "data": {
+      "text/plain": [
+       "'57.6778374'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_raw[\"numberofRooms\"]"
+    "data_raw['listing']['municipality']['fullName']\n",
+    "f\"{data_raw['listing']['streetAddress']}\"\n",
+    "f\"{data_raw['listing']['coordinate'][0]}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_parsed = {\n",
+    "    \"adress\": f\"{data_raw['listing']['streetAddress']}, {data_raw['listing']['area']}, {data_raw['listing']['municipality']['fullName']}\",\n",
+    "    \"longitude\": f\"{data_raw['listing']['coordinate'][0]}\",\n",
+    "    \"latitude\": f\"{data_raw['listing']['coordinate'][1]}\",\n",
+    "    \"living_area\": f\"{data_raw['listing']['livingArea']}\",\n",
+    "    \"land_area\": f\"{data_raw['listing']['landArea']}\",\n",
+    "    \"sold_price\": f\"{data_raw['listing']['soldAt']}\",\n",
+    "    \"supplemental_area\": f\"{data_raw['listing']['supplementalArea']}\",\n",
+    "    \"number_of_rooms\": f\"{data_raw['listing']['numberOfRooms']}\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adress': 'Pråmgatan 7C, Älvsborg, Göteborgs',\n",
+       " 'longitude': '57.6778374',\n",
+       " 'latitude': '11.8780241',\n",
+       " 'living_area': '175.0',\n",
+       " 'land_area': '951.8',\n",
+       " 'sold_price': '1671800400',\n",
+       " 'supplemental_area': '66.0',\n",
+       " 'number_of_rooms': '6.0'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_parsed"
    ]
   }
  ],
