Started processing the data
- Removed None values
- Replaced None and False values in the "supplementary_area" collum with 0

--- a/data_proccesing.ipynb
+++ b/data_proccesing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,49 +266,33 @@
        "[2500 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('house_properties_data.csv')\n",
+    "data= pd.read_csv('house_properties_data.csv')\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2500 entries, 0 to 2499\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   adress             2500 non-null   object\n",
-      " 1   longitude          2500 non-null   object\n",
-      " 2   latitude           2500 non-null   object\n",
-      " 3   living_area        2500 non-null   object\n",
-      " 4   land_area          2500 non-null   object\n",
-      " 5   supplemental_area  2500 non-null   object\n",
-      " 6   patio              2500 non-null   int64 \n",
-      " 7   balcony            2500 non-null   int64 \n",
-      " 8   number_of_rooms    2500 non-null   object\n",
-      " 9   build_year         2500 non-null   object\n",
-      " 10  operating cost     2500 non-null   object\n",
-      " 11  sold_price         2498 non-null   object\n",
-      "dtypes: int64(2), object(10)\n",
-      "memory usage: 234.5+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.info()"
+    "# Sets values to 0 if they are 'None' or 'False' in the 'supplemental_area' column\n",
+    "data['supplemental_area'] = data['supplemental_area'].replace(['None','False'],0)\n",
+    "\n",
+    "# Select rows that contain \"None\" in any column\n",
+    "df_to_drop = data[data.isin([\"None\"]).any(axis=1)]\n",
+    "\n",
+    "# Drop the rows that contain \"None\" in any column\n",
+    "data = data.drop(df_to_drop.index)\n",
+    "\n",
+    "# Replace entries in the form \"YYYY - YYYY\" with just the first year\n",
+    "data[\"build_year\"] = data[\"build_year\"].apply(lambda x: x.split(\" - \")[0] if isinstance(x, str) and \" - \" in x else x)"
    ]
   }
  ],
