Saved processed data

--- a/data_proccesing.ipynb
+++ b/data_proccesing.ipynb
@@ -255,8 +255,17 @@
     "sweden = gpd.read_file(\"sweden.geojson\")\n",
     "\n",
     "# Plot the map and the data points using Seaborn\n",
-    "sns.scatterplot(x=\"latitude\", y=\"longitude\", hue=\"sold_price\", data=gdf, legend=\"auto\", ax=sweden.plot(figsize=(14, 14)))\n",
-    "\n"
+    "sns.scatterplot(x=\"latitude\", y=\"longitude\", hue=\"sold_price\", data=gdf, legend=\"auto\", ax=sweden.plot(figsize=(14, 14)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the processed data to a csv file\n",
+    "data.to_csv('house_properties_data_processed.csv')"
    ]
   }
  ],
