Changed so that data file does not contain index collum

--- a/data_proccesing.ipynb
+++ b/data_proccesing.ipynb
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dan\\AppData\\Local\\Temp\\ipykernel_10392\\1847237817.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Dan\\AppData\\Local\\Temp\\ipykernel_11732\\1847237817.py:3: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(data.corr(), annot=True,cmap=\"YlGnBu\")\n"
      ]
     },
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dan\\AppData\\Local\\Temp\\ipykernel_10392\\1414549725.py:5: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Dan\\AppData\\Local\\Temp\\ipykernel_2988\\1414549725.py:5: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(data.corr(), annot=True,cmap=\"YlGnBu\")\n"
      ]
     },
@@ -196,7 +196,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -221,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the processed data to a csv file\n",
-    "data.to_csv('house_properties_data_processed.csv')"
+    "data.to_csv('house_properties_data_processed.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "Text(0.5, 1.0, 'Sold prices in Sweden')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
