--- a/predicting_prices_model.ipynb
+++ b/predicting_prices_model.ipynb
@@ -45,6 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the data\n",
     "data= pd.read_csv('house_properties_data_processed.csv')"
    ]
   },
@@ -54,10 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# drop the adress column\n",
     "data.drop(columns='adress', inplace=True,axis=1)\n",
     "\n",
-    "# Scale the values in the dataframe\n",
-    "\n",
+    "# split the data into train, validation and test sets\n",
     "train, test = train_test_split(data, test_size=0.2)\n",
     "train, validation = train_test_split(train,test_size=0.2)"
    ]
@@ -68,6 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# split the data into features and labels and scale it to be between 0 and 1 using the max value\n",
     "data_features = train.copy()\n",
     "\n",
     "data_scaling = max(data['sold_price'])\n",
@@ -83,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# input dictionary for the input layer taken from the data features\n",
     "inputs = {name: tf.keras.layers.Input(shape=(1,), name=name) for name in data_features.keys()}"
    ]
   },
@@ -134,6 +137,7 @@
     }
    ],
    "source": [
+    "# concatenate the inputs into a tensor\n",
     "numeric_inputs = {name: input for name, input in inputs.items() if input.dtype == tf.float32}\n",
     "\n",
     "x = layers.Concatenate()(list(numeric_inputs.values()))\n",
@@ -171,6 +175,7 @@
     }
    ],
    "source": [
+    "# model that preprocesses the data\n",
     "housePrices_preprocessing = tf.keras.Model(inputs, preprocessed_inputs)\n",
     "\n",
     "tf.keras.utils.plot_model(model = housePrices_preprocessing , rankdir=\"LR\", dpi=72, show_shapes=True)"
@@ -182,6 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a dictionary of tensors for the categorical inputs\n",
     "data_features_dict = {name: np.array(value) \n",
     "                         for name, value in data_features.items()}"
    ]
@@ -216,11 +222,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define the model architecture and compile it\n",
     "def housePrices_model(preprocessing_head, inputs):\n",
     "  body = tf.keras.Sequential([\n",
     "    layers.Dense(128,activation='relu', kernel_regularizer=regularizers.l2(0.001)),\n",
     "    layers.Dense(64,activation='relu'),\n",
-    "    #layers.Dense(64,activation='relu'),\n",
     "    layers.Dense(1)\n",
     "  ])\n",
     "\n",
@@ -747,6 +753,7 @@
     }
    ],
    "source": [
+    "# train the model using data features and labels and validate it using the validation set\n",
     "validation_features_dict = {name: np.array(value) \n",
     "                         for name, value in validation.items()}\n",
     "history_1 = housePrices_model.fit(x=data_features_dict, y=data_labels,epochs=250,\n",
@@ -827,6 +834,7 @@
     }
    ],
    "source": [
+    "# save model and load it\n",
     "housePrices_model.save('House_prices_model')\n",
     "reloaded = tf.keras.models.load_model('House_prices_model')"
    ]
@@ -837,12 +845,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a dictionary of features for the test set\n",
     "test_features_dict = {name: np.array(value) \n",
     "                         for name, value in test.items()}\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "#predict the price of the test set\n",
     "predicted_price_test_set = reloaded.predict(test_features_dict)*data_scaling\n",
     "\n",
     "test_with_result = test.copy()\n",
@@ -866,6 +873,7 @@
     }
    ],
    "source": [
+    "# scatterplot of the predicted and actual prices of the test set, red line is the line of equality\n",
     "sns.scatterplot(x = test_with_result['sold_price'], y = test_with_result['predicted_price'])\n",
     "sns.lineplot(x = test_with_result['sold_price'], y = test_with_result['sold_price'],dashes=True, color='red')\n",
     "\n",
@@ -892,6 +900,7 @@
     }
    ],
    "source": [
+    "# calculate the errors\n",
     "errors = test_with_result['sold_price'] - test_with_result['predicted_price']\n",
     "\n",
     "# Create the histogram\n",
@@ -923,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, Mar 28 2022, 06:59:08) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
